# CImg

./: .gitignore  CImg.h  CMakeLists.txt  README.txt
examples/: CImg_demo.cpp  CMakeLists.txt  Makefile  ezminc.cpp  gmic.cpp  gmic.h  gmic_def.gmic  gmic_gimp.cpp  jawbreaker.cpp  scene3d.cpp  tetris.cpp
plugins/: draw_gradient.h  nlmeans.h
