# CMakeFiles.txt for CImg examples
#
# Haz-Edine Assemlal <assemlal@gmail.com>

add_executable( CImg_demo CImg_demo.cpp )
add_executable( captcha captcha.cpp )
add_executable( curve_editor2d curve_editor2d.cpp )
add_executable( dtmri_view3d dtmri_view3d.cpp )
add_executable( edge_explorer2d edge_explorer2d.cpp )
add_executable( fade_images fade_images.cpp )
add_executable( gaussian_fit1d gaussian_fit1d.cpp )
add_executable( generate_loop_macros generate_loop_macros.cpp )
add_executable( hough_transform2d hough_transform2d.cpp )
add_executable( image2ascii image2ascii.cpp )
add_executable( image_registration2d image_registration2d.cpp )
add_executable( image_surface3d image_surface3d.cpp )
add_executable( jawbreaker jawbreaker.cpp )
add_executable( mcf_levelsets2d mcf_levelsets2d.cpp )
add_executable( mcf_levelsets3d mcf_levelsets3d.cpp )
add_executable( odykill odykill.cpp )
add_executable( pde_heatflow2d pde_heatflow2d.cpp )
add_executable( pde_TschumperleDeriche2d pde_TschumperleDeriche2d.cpp )
add_executable( plotter1d plotter1d.cpp )
add_executable( radon_transform2d radon_transform2d.cpp )
add_executable( scene3d scene3d.cpp )
add_executable( spherical_function3d spherical_function3d.cpp )
add_executable( tetris tetris.cpp )
add_executable( tron tron.cpp )
add_executable( tutorial tutorial.cpp )
add_executable( use_draw_gradient use_draw_gradient.cpp )
add_executable( use_nlmeans use_nlmeans.cpp )
add_executable( use_RGBclass use_RGBclass.cpp )
add_executable( use_skeleton use_skeleton.cpp )
add_executable( wavelet_atrous wavelet_atrous.cpp )

# TODO 
#add_executable( gmic_gimp gmic_gimp.cpp )
add_executable( gmic gmic.cpp )

# -- Extra package
#add_executable( use_cimgIPL use_cimgIPL.cpp )
#add_executable( use_cimgmatlab use_cimgmatlab.cpp )
#add_executable( use_jpeg_buffer use_jpeg_buffer.cpp )

